--- a/src/app/views/partials/header/header.component.html
+++ b/src/app/views/partials/header/header.component.html
@@ -1,7 +1,9 @@
 <header class="header">
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container">
-      <a class="navbar-brand text-secondary fw-bold" href="#">Admin Panel</a>
+    <div class="container-fluid d-flex justify-content-between align-items-center">
+    
+      <a class="navbar-brand text-secondary fw-bold">Admin Panel</a>
+    
       <button 
         class="navbar-toggler" 
         type="button" 
@@ -13,8 +15,10 @@
       >
         <span class="navbar-toggler-icon"></span>
       </button>
+
+     
       <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-        <ul class="navbar-nav">
+        <ul class="navbar-nav ms-auto">
           <li class="nav-item">
             <button class="btn btn-danger" (click)="logout()">
               <i class="ri-logout-circle-line"></i> Logout
