admin panel live

--- a/src/app/views/pages/ReferralPoints/referralpoint.component.html
+++ b/src/app/views/pages/ReferralPoints/referralpoint.component.html
@@ -105,9 +105,9 @@
           <thead class="bg-light">
             <tr>
               <th class="py-3">Sr No</th>
-              <th class="py-3">Name</th>
+              <th class="py-3"> Members Full Name </th>
               <th class="py-3">Attendance Regular Point</th>
-              <th class="py-3">Induction</th>
+              <th class="py-3">Induction Points</th>
               <th class="py-3">Referral Point</th>
               <th class="py-3">One to One Point</th>
               <th class="py-3">TYFCB Point</th>
